--- a/apps/mobile/.eslintrc.json
+++ b/apps/mobile/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["plugin:@nrwl/nx/react", "../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "**/node_modules"],
   "overrides": [
     {
       "files": ["*.tsx", "*.ts"],
