--- a/package.json
+++ b/package.json
@@ -4,43 +4,43 @@
   "license": "Copyright Hambrand Technologies Ltd",
   "bump-rebuild-all": 5,
   "scripts": {
-    "nx": "../../node_modules/.bin/nx",
-    "vercel": "../../node_modules/.bin/vercel",
-    "apollo": "../../node_modules/.bin/apollo",
-    "nest": "cd ../backend && nest",
-    "start": "../../node_modules/.bin/nx serve",
-    "dev": "../../node_modules/.bin/yarn start",
-    "hasura:export": "npx -p hasura-cli ../../hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
-    "production:start": "../../node_modules/.bin/nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
-    "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
-    "pipeline-checks": "../../node_modules/.bin/concurrently npm:ls-lint npm:test npm:lint npm:e2e",
-    "ls-lint": "../../node_modules/.bin/ls-lint",
-    "test": "../../node_modules/.bin/nx test",
-    "lint": "../../node_modules/.bin/nx workspace-lint && nx lint",
-    "e2e": "../../node_modules/.bin/nx e2e",
-    "affected:apps": "../../node_modules/.bin/nx affected:apps",
-    "affected:libs": "../../node_modules/.bin/nx affected:libs",
-    "affected:build": "../../node_modules/.bin/nx affected:build",
-    "affected:e2e": "../../node_modules/.bin/nx affected:e2e",
-    "affected:test": "../../node_modules/.bin/nx affected:test",
-    "affected:lint": "../../node_modules/.bin/nx affected:lint",
-    "affected:dep-graph": "../../node_modules/.bin/nx affected:dep-graph",
-    "affected": "../../node_modules/.bin/nx affected",
-    "format": "../../node_modules/.bin/nx format:write",
-    "format:write": "../../node_modules/.bin/nx format:write",
-    "format:check": "../../node_modules/.bin/nx format:check",
-    "update": "../../node_modules/.bin/yarn upgrade-interactive && nx migrate latest",
-    "workspace-schematic": "../../node_modules/.bin/nx workspace-schematic",
-    "dep-graph": "../../node_modules/.bin/nx dep-graph",
-    "prisma": "../../node_modules/.bin/prisma",
-    "prisma:generate": "../../node_modules/.bin/prisma generate",
-    "prisma:format": "../../node_modules/.bin/prisma format",
-    "nexus:generate": "../../node_modules/.bin/ts-node-dev --transpile-only apps/bridge-api/src/schema",
-    "prisma:convert" : "../../node_modules/.bin/pal schema apps/bridge-api/src/schema",
-    "prisma:migrate": "../../node_modules/.bin/prisma migrate dev --preview-feature",
-    "prisma:generate:types": "../../node_modules/.bin/pal g",
-    "bridge:generate": "../../node_modules/.bin/prisma generate && pal g && pal schema typescript -o apps/bridge-api/src/generated && ts-node-dev --transpile-only apps/bridge-api/src/schema",
-    "postinstall": "../../node_modules/.bin/husky install"
+    "nx": "node_modules/.bin/nx",
+    "vercel": "node_modules/.bin/vercel",
+    "apollo": "node_modules/.bin/apollo",
+    "nest": "cd apps/backend && nest",
+    "start": "node_modules/.bin/nx serve",
+    "dev": "node_modules/.bin/yarn start",
+    "hasura:export": "npx -p hasura-cli hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
+    "production:start": "node_modules/.bin/nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
+    "build": "pwd && ls -al && rm -rf apps/web/public && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
+    "pipeline-checks": "node_modules/.bin/concurrently npm:ls-lint npm:test npm:lint npm:e2e",
+    "ls-lint": "node_modules/.bin/ls-lint",
+    "test": "node_modules/.bin/nx test",
+    "lint": "node_modules/.bin/nx workspace-lint && nx lint",
+    "e2e": "node_modules/.bin/nx e2e",
+    "affected:apps": "node_modules/.bin/nx affected:apps",
+    "affected:libs": "node_modules/.bin/nx affected:libs",
+    "affected:build": "node_modules/.bin/nx affected:build",
+    "affected:e2e": "node_modules/.bin/nx affected:e2e",
+    "affected:test": "node_modules/.bin/nx affected:test",
+    "affected:lint": "node_modules/.bin/nx affected:lint",
+    "affected:dep-graph": "node_modules/.bin/nx affected:dep-graph",
+    "affected": "node_modules/.bin/nx affected",
+    "format": "node_modules/.bin/nx format:write",
+    "format:write": "node_modules/.bin/nx format:write",
+    "format:check": "node_modules/.bin/nx format:check",
+    "update": "node_modules/.bin/yarn upgrade-interactive && nx migrate latest",
+    "workspace-schematic": "node_modules/.bin/nx workspace-schematic",
+    "dep-graph": "node_modules/.bin/nx dep-graph",
+    "prisma": "node_modules/.bin/prisma",
+    "prisma:generate": "node_modules/.bin/prisma generate",
+    "prisma:format": "node_modules/.bin/prisma format",
+    "nexus:generate": "node_modules/.bin/ts-node-dev --transpile-only apps/bridge-api/src/schema",
+    "prisma:convert" : "node_modules/.bin/pal schema apps/bridge-api/src/schema",
+    "prisma:migrate": "node_modules/.bin/prisma migrate dev --preview-feature",
+    "prisma:generate:types": "node_modules/.bin/pal g",
+    "bridge:generate": "node_modules/.bin/prisma generate && pal g && pal schema typescript -o apps/bridge-api/src/generated && ts-node-dev --transpile-only apps/bridge-api/src/schema",
+    "postinstall": "node_modules/.bin/husky install"
   },
   "private": true,
   "dependencies": {
