--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "less": "^3.13.0",
     "less-loader": "^7",
     "less-vars-to-js": "^1.3.0",
-    "next": "^10.0.8",
+    "next": "10.0.7",
     "next-auth": "^3.11.2",
     "next-images": "^1.7.0",
     "next-plugin-antd-less": "^0.3.0",
