--- a/package.json
+++ b/package.json
@@ -210,7 +210,8 @@
     "tslint": "6.1.3",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "vercel": "^21.3.3"
+    "vercel": "^21.3.3",
+    "yaml-loader": "^0.6.0"
   },
   "resolutions": {
     "**/immer": "8.0.1",
