--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "prisma": "prisma",
     "prisma:generate": "prisma generate",
     "prisma:format": "prisma format",
-    "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema",
-    "bridge:generate": "prisma format && prisma generate && pal g && pal schema typescript -o apps/bridge-api/src/generated && ts-node-dev --transpile-only apps/bridge-api/src/schema",
+    "nexus:generate": "cross-env NODE_ENV=development ts-node-dev --transpile-only apps/bridge-api/src/schema",
+    "bridge:generate": "prisma generate && pal g && pal schema typescript -o apps/bridge-api/src/generated && ts-node-dev --transpile-only apps/bridge-api/src/schema",
     "postinstall": "husky install"
   },
   "private": true,
@@ -54,7 +54,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
-    "@prisma/client": "^2.18.0",
+    "@prisma/client": "2.17.0",
     "@storybook/addon-docs": "^6.1.21",
     "@zeit/next-less": "1.0.1",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
@@ -202,7 +202,7 @@
     "jest-react-native": "18.0.0",
     "metro-react-native-babel-preset": "0.65.2",
     "prettier": "^2.2.1",
-    "prisma": "^2.18.0",
+    "prisma": "2.17.0",
     "react-cookie": "^4.0.3",
     "react-docgen-typescript": "^1.20.5",
     "react-test-renderer": "17.0.1",
