clean up, add hasura local docker-

--- a/hasura/docker-compose.yml
+++ b/hasura/docker-compose.yml
@@ -24,5 +24,6 @@ services:
       ## uncomment next line to set an admin secret
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS512", "key": "SecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCode"}'
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: "public"
 volumes:
   db_data:
