end of day changes

--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "next-auth": "^3.11.2",
     "next-images": "^1.7.0",
     "next-plugin-antd-less": "^0.3.0",
-    "nexus": "^1.0.0",
-    "nexus-plugin-prisma": "^0.31.0",
+    "nexus": "1.0.0",
+    "nexus-plugin-prisma": "0.31.0",
     "node-fetch": "^2.6.1",
     "preferred-locale": "^1.0.10",
     "r7insight_node": "^2.1.0",
