--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "concurrently npm:ls-lint npm:test npm:lint npm:e2e",
+    "pipeline-checks:all": "concurrently --max-processes=1 --kill-others \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
     "ls-lint": "ls-lint",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -55,6 +56,8 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
+    "@paljs/cli": "^2.13.0",
+    "@paljs/nexus": "^2.13.0",
     "@prisma/client": "2.17.0",
     "@storybook/addon-docs": "^6.1.21",
     "@zeit/next-less": "1.0.1",
@@ -124,9 +127,7 @@
     "ts-node-dev": "^1.1.6",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9",
-    "@paljs/nexus": "^2.13.0",
-    "@paljs/cli": "^2.13.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
@@ -194,6 +195,7 @@
     "cypress": "^6.5.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
+    "eslint-config-canonical": "^25.9.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-graphql": "^4.0.0",
@@ -203,12 +205,14 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sonarjs": "^0.6.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.11.0",
     "graphql-shield": "^7.5.0",
     "jest": "^26.2.2",
     "jest-react-native": "18.0.0",
     "metro-react-native-babel-preset": "0.65.2",
     "prettier": "^2.2.1",
     "prisma": "2.17.0",
+    "prisma-json-schema-generator": "^1.2.1",
     "react-cookie": "^4.0.3",
     "react-docgen-typescript": "^1.20.5",
     "react-test-renderer": "17.0.1",
@@ -218,8 +222,7 @@
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "vercel": "^21.3.3",
-    "yaml-loader": "^0.6.0",
-    "prisma-json-schema-generator": "^1.2.1"
+    "yaml-loader": "^0.6.0"
   },
   "resolutions": {
     "**/immer": "8.0.1",
