--- a/package.json
+++ b/package.json
@@ -126,7 +126,8 @@
     "uuid": "^8.3.2",
     "yup": "^0.32.9",
     "@paljs/nexus": "^2.13.0",
-    "@paljs/cli": "^2.13.0"
+    "@paljs/cli": "^2.13.0",
+    "sql-template-tag": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
