--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -678,6 +678,59 @@
       filter: {}
 - table:
     schema: public
+    name: candidate_list
+  array_relationships:
+  - name: job_candidates
+    using:
+      foreign_key_constraint_on:
+        column: candidate_id
+        table:
+          schema: public
+          name: job_candidates
+  insert_permissions:
+  - role: public
+    permission:
+      check: {}
+      columns:
+      - id
+      - first_name
+      - last_name
+      - rating
+      - phone
+      - created_at
+      - updated_at
+      backend_only: false
+  select_permissions:
+  - role: public
+    permission:
+      columns:
+      - id
+      - first_name
+      - last_name
+      - rating
+      - phone
+      - created_at
+      - updated_at
+      filter: {}
+  update_permissions:
+  - role: public
+    permission:
+      columns:
+      - id
+      - first_name
+      - last_name
+      - rating
+      - phone
+      - created_at
+      - updated_at
+      filter: {}
+      check: null
+  delete_permissions:
+  - role: public
+    permission:
+      filter: {}
+- table:
+    schema: public
     name: category
   insert_permissions:
   - role: public
@@ -1318,7 +1371,67 @@
       filter: {}
 - table:
     schema: public
+    name: job_candidates
+  object_relationships:
+  - name: candidate_list
+    using:
+      foreign_key_constraint_on: candidate_id
+  - name: job_opening
+    using:
+      foreign_key_constraint_on: job_opening_id
+  insert_permissions:
+  - role: public
+    permission:
+      check: {}
+      columns:
+      - is_new
+      - candidate_id
+      - id
+      - job_opening_id
+      - status
+      - created_at
+      - updated_at
+      backend_only: false
+  select_permissions:
+  - role: public
+    permission:
+      columns:
+      - is_new
+      - candidate_id
+      - id
+      - job_opening_id
+      - status
+      - created_at
+      - updated_at
+      filter: {}
+  update_permissions:
+  - role: public
+    permission:
+      columns:
+      - is_new
+      - candidate_id
+      - id
+      - job_opening_id
+      - status
+      - created_at
+      - updated_at
+      filter: {}
+      check: null
+  delete_permissions:
+  - role: public
+    permission:
+      filter: {}
+- table:
+    schema: public
     name: job_openings
+  array_relationships:
+  - name: job_candidates
+    using:
+      foreign_key_constraint_on:
+        column: job_opening_id
+        table:
+          schema: public
+          name: job_candidates
   insert_permissions:
   - role: public
     permission:
