--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pabau",
-  "version": "2.0.211",
+  "version": "2.0.217",
   "license": "Copyright Hambrand Technologies Ltd",
   "bump-rebuild-all": 5,
   "scripts": {
@@ -79,7 +79,6 @@
     "graphql": "^15.4.0",
     "graphql-middleware": "^6.0.4",
     "highcharts": "^9.0.1",
-    "husky": "^5.1.3",
     "i18n-iso-countries": "^6.5.0",
     "i18next": "^19.9.1",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -175,6 +174,7 @@
     "@testing-library/jest-native": "4.0.1",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-native": "7.2.0",
+    "@types/classnames": "^2.2.11",
     "@types/cookie-session": "^2.0.42",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
@@ -208,6 +208,7 @@
     "eslint-plugin-sonarjs": "^0.6.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.11.0",
     "graphql-shield": "^7.5.0",
+    "husky": "^5.0.9",
     "jest": "^26.2.2",
     "jest-react-native": "18.0.0",
     "metro-react-native-babel-preset": "0.65.2",
