--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nest": "cd apps/backend && nest",
     "start": "nx serve",
     "dev": "concurrently npm:start \"nx serve bridge-api\"",
+    "dev:bridge-api": "nx serve bridge-api",
     "hasura:export": "npx -p hasura-cli hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
@@ -120,14 +121,14 @@
     "react-use": "^17.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.6",
+    "sql-template-tag": "^4.0.0",
     "storybook-addon-i18next": "^1.3.0",
     "string-to-color": "^2.2.2",
     "subscriptions-transport-ws": "^0.9.18",
     "ts-node-dev": "^1.1.6",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9",
-    "sql-template-tag": "^4.0.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
@@ -189,6 +190,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@vercel/node": "^1.9.1",
+    "apollo-server-testing": "^2.21.2",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "bitbucket": "^2.4.2",
