--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nest": "cd apps/backend && nest",
     "start": "nx serve",
     "dev": "concurrently npm:start \"nx serve bridge-api\"",
-    "hasura:export": "npx -p hasura-cli hasura --project hasura metadata export --admin-secret \"madskills\" && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
+    "hasura:export": "npx -p hasura-cpli hasura --project hasura metadata export --admin-secret \"madskills\" && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "concurrently npm:ls-lint npm:test npm:lint npm:e2e",
@@ -80,7 +80,6 @@
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
     "html-to-image": "^1.3.21",
-    "husky": "^5.1.3",
     "i18n-iso-countries": "^6.5.0",
     "i18next": "^19.9.1",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -173,7 +172,7 @@
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-storysource": "^6.1.21",
     "@storybook/react": "^6.1.21",
-    "@testing-library/jest-native": "4.0.1",
+    "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-native": "7.2.0",
     "@types/classnames": "^2.2.11",
