--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pabau",
-  "version": "2.0.239",
+  "version": "2.0.240",
   "license": "Copyright Hambrand Technologies Ltd",
   "bump-rebuild-all": 5,
   "scripts": {
@@ -122,14 +122,14 @@
     "react-use": "^17.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.6",
+    "sql-template-tag": "^4.0.0",
     "storybook-addon-i18next": "^1.3.0",
     "string-to-color": "^2.2.2",
     "subscriptions-transport-ws": "^0.9.18",
     "ts-node-dev": "^1.1.6",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9",
-    "sql-template-tag": "^4.0.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
@@ -215,6 +215,7 @@
     "jest": "^26.2.2",
     "jest-react-native": "18.0.0",
     "metro-react-native-babel-preset": "0.65.2",
+    "next-page-tester": "^0.24.1",
     "prettier": "^2.2.1",
     "prisma": "2.17.0",
     "prisma-json-schema-generator": "^1.2.1",
@@ -227,8 +228,7 @@
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "vercel": "^21.3.3",
-    "yaml-loader": "^0.6.0",
-    "next-page-tester": "^0.24.1"
+    "yaml-loader": "^0.6.0"
   },
   "resolutions": {
     "**/immer": "8.0.1",
