CI: hotfix to allow docker to be run

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,6 +21,8 @@ pipelines:
       - step:
           name: PR pipeline
           size: 2x
+          services:
+            - docker
           caches:
             - nodemodules
             - yarncustom
@@ -96,6 +98,8 @@ pipelines:
           name: test (lint+unit), build, deploy
           deployment: Production
           size: 2x
+          services:
+            - docker
           caches:
             - nodemodules
             - yarncustom
