--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,4 +1,10 @@
-actions: []
+actions:
+- name: login
+  definition:
+    kind: ""
+    handler: https://api-toshe.pabau.me/login
+  permissions:
+  - role: public
 custom_types:
   enums: []
   input_objects:
