CI: Hotfix to reduce RAM needed for linting

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -65,7 +65,7 @@ pipelines:
             - tsc --noEmit -p libs/ui/tsconfig.lib.json
             - tsc --noEmit -p libs/yup/tsconfig.lib.json
 
-            - sh -c "NODE_OPTIONS=--max_old_space_size=8192 yarn affected --base=origin/master --target=lint --with-deps --parallel"
+            - sh -c "NODE_OPTIONS=--max_old_space_size=8192 yarn affected --base=origin/master --target=lint --with-deps"
             - sh -c "NODE_OPTIONS=--max_old_space_size=8192 yarn affected --base=origin/master --target=test"
             - sh -c "NODE_OPTIONS=--max_old_space_size=8192 yarn affected --base=origin/master --target=deploy"
             - cat /tmp/bot_message.txt
@@ -125,7 +125,7 @@ pipelines:
             - tsc --noEmit -p libs/ui/tsconfig.lib.json
             - tsc --noEmit -p libs/yup/tsconfig.lib.json
 
-            - NODE_OPTIONS=--max_old_space_size=8192 /usr/bin/time -v yarn affected:lint --base=HEAD~1 --with-deps --parallel
+            - NODE_OPTIONS=--max_old_space_size=8192 /usr/bin/time -v yarn affected:lint --base=HEAD~1 --with-deps
             - NODE_OPTIONS=--max_old_space_size=8192 /usr/bin/time -v yarn affected:test --base=HEAD~1
 
             # get the commit message for this merge
