master deploy #fix 3

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,7 @@ image: node:14-buster
 
 options:
   docker: true
+  size: 2x
   max-time: 32 # max time in minutes for each step
 
 definitions:
@@ -14,13 +15,14 @@ definitions:
     cypress: '/root/.cache/Cypress'
   services:
     docker:
-      memory: 2048
+      memory: 8192
 
 pipelines:
   pull-requests:
     '**':
       - step:
           name: PR pipeline
+          size: 2x
           services:
             - docker
           caches:
