--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,8 +3,8 @@
 image: node:14-buster
 
 options:
-  docker: true
-  size: 2x
+#  docker: true
+#  size: 2x
   max-time: 32 # max time in minutes for each step
 
 definitions:
@@ -13,9 +13,9 @@ definitions:
     yarncustom: /usr/local/share/.cache/yarn
     nextcache: dist
     cypress: '/root/.cache/Cypress'
-  services:
-    docker:
-      memory: 8192
+#  services:
+#    docker:
+#      memory: 8192
 
 pipelines:
   pull-requests:
