--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@
 image: node:14-buster
 
 options:
-  max-time: 32 # max time in minutes for each step
+  max-time: 45 # max time in minutes for each step
 
 definitions:
   caches:
@@ -11,9 +11,9 @@ definitions:
     yarncustom: /usr/local/share/.cache/yarn
     nextcache: dist
     cypress: '/root/.cache/Cypress'
-#  services:
-#    docker:
-#      memory: 2048
+  services:
+    docker:
+      memory: 6000
 
 pipelines:
   pull-requests:
